Turn off the `use_logging` default feature of quickcheck. (#465)
Turning off the default features of quickcheck removes its
`env_logger` and `log` dependencies. It uses older versions of
those packages than conduit-proxy will use, so this will
(eventually) reduce the number of versions of those packages that
get downloaded and built.

Signed-off-by: Brian Smith <brian@briansmith.org>

--- a/proxy/controller-grpc/Cargo.toml
+++ b/proxy/controller-grpc/Cargo.toml
@@ -21,7 +21,7 @@ prost-types = "0.3.0"
 tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
 tower-h2   = { git = "https://github.com/tower-rs/tower-h2" }
 
-quickcheck = { version = "0.6", optional = true }
+quickcheck = { version = "0.6", default-features = false, optional = true }
 
 
 [build-dependencies]
