--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "conduit-proxy-controller-grpc"
-version = "0.3.0"
+name = "linkerd2-proxy-api"
+version = "0.1.0"
+authors = ["Oliver Gould <ver@buoyant.io>"]
 publish = false
 
 [features]
