don't separate install step for go

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ jobs:
       go_import_path: github.com/linkerd/linkerd2-proxy-api
       cache:
         directories:
+          - target
           - vendor
-      install: make Gopkg.lock
       script: make check-go
 
 notifications:
