--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -11,18 +11,18 @@ arbitrary = ["quickcheck"]
 [dependencies]
 bytes = "0.4"
 futures = "0.1"
-h2 = "0.1"
+h2 = "0.1.11"
 http = "0.1"
 prost = "0.4.0"
 prost-derive = "0.4.0"
 prost-types = "0.4.0"
 
-tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
-tower-h2   = { git = "https://github.com/tower-rs/tower-h2" }
+tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", branch = "eliza/generic-service" }
+tower-h2   = { git = "https://github.com/tower-rs/tower-h2", branch = "eliza/generic-service" }
 
 quickcheck = { version = "0.6", default-features = false, optional = true }
 
 
 [build-dependencies]
-tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
+tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc", branch = "eliza/generic-service" }
 
