--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -17,12 +17,11 @@ prost = "0.4.0"
 prost-derive = "0.4.0"
 prost-types = "0.4.0"
 
-tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
-tower-h2   = { git = "https://github.com/tower-rs/tower-h2" }
+tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", default-features = false, features = ["protobuf"] }
 
 quickcheck = { version = "0.6", default-features = false, optional = true }
 
 
 [build-dependencies]
-tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
+tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc", default-features = false }
 
