--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "linkerd2-proxy-api"
-version = "0.1.10"
-authors = ["Oliver Gould <ver@buoyant.io>"]
+version = "0.1.11"
+authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
 publish = false
 edition = "2018"
 
