install rustfmt on ci
Signed-off-by: Eliza Weisman <eliza@buoyant.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ branches:
 jobs:
   include:
     - language: rust
+      install: rustup component add rustfmt
       script: make rs
       rust: stable
       cache: cargo
