--- a/rs-tonic/Cargo.toml
+++ b/rs-tonic/Cargo.toml
@@ -7,13 +7,16 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+# Generate code that is compatible with Tonic's `transport` module.
+transport = ["tonic-build/transport"]
 
 [dependencies]
-tonic = { version = "0.2", features = ["tls", "tokio", "prost"] }
+tonic = { version = "0.2", default-features = false, features = ["prost", "codegen"] }
 prost = "0.6"
 prost-types = "0.6"
 h2 = "0.2"
 http = "0.2"
 
 [build-dependencies]
-tonic-build = { version = "0.2" }
+tonic-build = { version = "0.2", features = ["rustfmt", "prost"], default-features = false }
