--- a/rs-tonic/Cargo.toml
+++ b/rs-tonic/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 [features]
 # Generate code that is compatible with Tonic's `transport` module.
 transport = ["tonic-build/transport"]
+# Enable generation of arbitrary protos with quickcheck.
+arbitrary = ["quickcheck", "rand"]
 
 [dependencies]
 tonic = { version = "0.2", default-features = false, features = ["prost", "codegen"] }
@@ -17,6 +19,10 @@ prost = "0.6"
 prost-types = "0.6"
 h2 = "0.2"
 http = "0.2"
+
+# For `arbitrary`:
+quickcheck = { version = "0.9", default-features = false, optional = true }
+rand = { version = "0.7", optional = true }
 
 [build-dependencies]
 tonic-build = { version = "0.2", features = ["prost"], default-features = false }
