--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 
 [features]
 # Generate code that is compatible with Tonic's `transport` module.
-transport = ["tonic-build/transport"]
+transport = ["tonic-build/transport", "tonic/transport"]
 # Enable generation of arbitrary protos with quickcheck.
 arbitrary = ["quickcheck", "rand"]
 
@@ -25,4 +25,4 @@ quickcheck = { version = "0.9", default-features = false, optional = true }
 rand = { version = "0.7", optional = true }
 
 [build-dependencies]
-tonic-build = { version = "0.2", features = ["prost", "rustfmt"], default-features = false }
+tonic-build = { version = "0.2", features = ["prost"], default-features = false }
