--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -14,15 +14,15 @@ rustfmt = ["tonic-build/rustfmt"]
 arbitrary = ["quickcheck", "rand"]
 
 [dependencies]
-tonic = { git = "https://github.com/hawkw/tonic", branch = "eliza/tokio-0.3", default-features = false, features = ["prost", "codegen"] }
-prost = { git = "https://github.com/danburkert/prost" }
-prost-types = { git = "https://github.com/danburkert/prost" }
-h2 = "0.2"
+tonic = { git = "https://github.com/QuentinPerez/tonic", branch = "qperez/upgrade-to-tokio-1", default-features = false, features = ["prost", "codegen"] }
+prost = "0.7"
+prost-types = "0.7"
+h2 = "0.3"
 http = "0.2"
 
 # For `arbitrary`:
 quickcheck = { version = "0.9", default-features = false, optional = true }
-rand = { version = "0.7", optional = true }
+rand = { version = "0.8", optional = true }
 
 [build-dependencies]
-tonic-build = { git = "https://github.com/hawkw/tonic", branch = "eliza/tokio-0.3", features = ["prost"], default-features = false }
+tonic-build = { git = "https://github.com/QuentinPerez/tonic", branch = "qperez/upgrade-to-tokio-1", features = ["prost"], default-features = false }
