--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -15,7 +15,7 @@ rustfmt = ["tonic-build/rustfmt"]
 arbitrary = ["quickcheck", "rand"]
 
 [dependencies]
-tonic = { git = "https://github.com/QuentinPerez/tonic", branch = "qperez/upgrade-to-tokio-1", default-features = false, features = ["prost", "codegen"] }
+tonic = { git = "https://github.com/hyperium/tonic", default-features = false, features = ["prost", "codegen"] }
 prost = "0.7"
 prost-types = "0.7"
 h2 = "0.3"
@@ -26,4 +26,4 @@ quickcheck = { version = "1", default-features = false, optional = true }
 rand = { version = "0.8", optional = true }
 
 [build-dependencies]
-tonic-build = { git = "https://github.com/QuentinPerez/tonic", branch = "qperez/upgrade-to-tokio-1", features = ["prost"], default-features = false }
+tonic-build = { git = "https://github.com/hyperium/tonic", features = ["prost"], default-features = false }
