--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "linkerd2-proxy-api"
-version = "0.1.17"
+version = "0.1.18"
 authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
 license = "Apache-2.0"
 publish = false
@@ -15,7 +15,7 @@ rustfmt = ["tonic-build/rustfmt"]
 arbitrary = ["quickcheck", "rand"]
 
 [dependencies]
-tonic = { git = "https://github.com/QuentinPerez/tonic", branch = "qperez/upgrade-to-tokio-1", default-features = false, features = ["prost", "codegen"] }
+tonic = { version = "0.4", default-features = false, features = ["prost", "codegen"] }
 prost = "0.7"
 prost-types = "0.7"
 h2 = "0.3"
@@ -26,4 +26,4 @@ quickcheck = { version = "1", default-features = false, optional = true }
 rand = { version = "0.8", optional = true }
 
 [build-dependencies]
-tonic-build = { git = "https://github.com/QuentinPerez/tonic", branch = "qperez/upgrade-to-tokio-1", features = ["prost"], default-features = false }
+tonic-build = { version = "0.4", default-features = false, features = ["prost"] }
