--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       image: docker://rust:1.49.0-buster
     steps:
     # actions/checkout@v2
-    - uses: actions/checkout@722adc6
+    - uses: actions/checkout@v2
     - run: make rs
 
   rust_audit:
@@ -51,7 +51,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     # actions/checkout@v2
-    - uses: actions/checkout@722adc6
+    - uses: actions/checkout@v2
     - name: Check go
       run: |
         export PATH="$(go env GOPATH)/bin:$PATH"
