--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -15,11 +15,12 @@ rustfmt = ["tonic-build/rustfmt"]
 arbitrary = ["quickcheck", "rand"]
 
 [dependencies]
-tonic = { version = "0.4", default-features = false, features = ["prost", "codegen"] }
-prost = "0.7"
-prost-types = "0.7"
 h2 = "0.3"
 http = "0.2"
+ipnet = "2"
+prost = "0.7"
+prost-types = "0.7"
+tonic = { version = "0.4", default-features = false, features = ["prost", "codegen"] }
 
 # For `arbitrary`:
 quickcheck = { version = "1", default-features = false, optional = true }
