rust: Add per-API feature flags (#59)
The proxy-api crate always builds servers and clients for all gRPC APIs,
but practically clients usually only intend to pull in a single
client/server for a single API.

This change introduces cargo features which are honored by `build.rs` to
limit which files and functionality are generated.

This change also fixes the `quickcheck::Arbitrary` implementations and
splits them into their respective modules.

CI is updated to exercise individual features in clippy and to use Rust
v1.52.1.

Finally, this change updates all cargo dependencies en masse.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,13 @@ jobs:
   rust_build:
     name: Rust build
     timeout-minutes: 5
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     container:
-      image: docker://rust:1.49.0-buster
+      image: docker://rust:1.52.1-buster
     steps:
     # actions/checkout@v2
     - uses: actions/checkout@v2
+    - run: rustup component add rustfmt # Needed for the rustfmt feature.
     - run: make rs
 
   rust_audit:
@@ -39,11 +40,11 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     container:
-      image: docker://rust:1.49.0-buster
+      image: docker://rust:1.52.1-buster
     steps:
       - uses: actions/checkout@v2
       - run: rustup component add clippy rustfmt
-      - run: cargo clippy --all-targets --all-features
+      - run: make clippy
 
   go_build:
     name: Go build
