--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -22,12 +22,13 @@ server = []
 http_types = ["h2", "http"]
 identity = ["prost-types"]
 destination = ["http_types", "net", "prost-types"]
-net = []
+net = ["ipnet"]
 tap = ["http_types", "net", "prost-types"]
 
 [dependencies]
 h2 = { version = "0.3", optional = true }
 http = { version = "0.2", optional = true }
+ipnet = { version = "2", optional = true }
 prost = "0.7"
 prost-types = { version = "0.7", optional = true }
 quickcheck = { version = "1", default-features = false, optional = true }
