--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -8,22 +8,25 @@ edition = "2018"
 
 [features]
 default = []
+
 # Generate code that is compatible with Tonic's `transport` module.
 transport = ["tonic-build/transport", "tonic/transport"]
+
 # Generate code that is formatted.
 rustfmt = ["tonic-build/rustfmt"]
+
 # Enable generation of arbitrary protos with quickcheck.
 arbitrary = ["quickcheck"]
 
-# Determiines whether clients or servers are built
-client = []
-server = []
+# Determines whether clients or servers are built
+client = ["transport"]
+server = ["transport"]
 
-http_types = ["h2", "http"]
+http_types = ["http", "thiserror"]
 identity = ["prost-types"]
 destination = ["http_types", "net", "prost-types"]
-net = ["ipnet"]
-tap = ["http_types", "net", "prost-types"]
+net = ["ipnet", "thiserror"]
+tap = ["h2", "http_types", "net", "prost-types"]
 
 [dependencies]
 h2 = { version = "0.3", optional = true }
@@ -32,6 +35,7 @@ ipnet = { version = "2", optional = true }
 prost = "0.7"
 prost-types = { version = "0.7", optional = true }
 quickcheck = { version = "1", default-features = false, optional = true }
+thiserror = { version = "1", optional = true }
 tonic = { version = "0.4", default-features = false, features = ["prost", "codegen"] }
 
 [build-dependencies]
