Add the `io.linkerd.proxy.inbound` API
The `io.linkerd.proxy.inbound` package provides the `InboundServerDiscovery`
service to support discovering inbound proxy configurations to support
access policies.

--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -22,9 +22,10 @@ arbitrary = ["quickcheck"]
 client = ["transport"]
 server = ["transport"]
 
+destination = ["http_types", "net", "prost-types"]
 http_types = ["http", "thiserror"]
 identity = ["prost-types"]
-destination = ["http_types", "net", "prost-types"]
+inbound = ["net", "prost-types"]
 net = ["ipnet", "thiserror"]
 tap = ["h2", "http_types", "net", "prost-types"]
 
