Add a devcontainer config
Add a devcontainer config, reusing the container image from the main
linkerd2 repo.

This change replaces the `rust-toolchain` file, which forces use of a
single rust version when interacting with the repo, with a documented
minimum supported `rust-version` in `Cargo.toml`. This allows the dev
image's rust version to work properly when running `cargo`, etc.

Signed-off-by: Oliver Gould <ver@buoyant.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ description = "Linkerd2 Proxy API gRPC bindings and utilities"
 homepage = "https://linkerd.io"
 repository = "https://github.com/linkerd/linkerd2-proxy-api"
 documentation = "https://docs.rs/linkerd2-proxy-api"
-keyword = ["linkerd", "grpc", "servicemesh"]
+keywords = ["linkerd", "grpc", "servicemesh"]
+rust-version = "1.56"
 
 [features]
 default = []
