--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     container:
-      image: docker://rust:1.56.0-buster
+      image: docker://rust:1.59.0-buster
     steps:
     # actions/checkout@v3
     - uses: actions/checkout@v3
@@ -40,7 +40,7 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     container:
-      image: docker://rust:1.56.0-buster
+      image: docker://rust:1.59.0-buster
     steps:
       - uses: actions/checkout@v3
       - run: rustup component add clippy rustfmt
@@ -50,6 +50,8 @@ jobs:
     name: Go build
     timeout-minutes: 5
     runs-on: ubuntu-18.04
+    container:
+      image: golang:1.17
     steps:
     # actions/checkout@v3
     - uses: actions/checkout@v3
