rust: Remove build dependency on `protoc`
The protobuf project does not publish `protoc` binaries for 32-bit ARM
hosts, which complicates our compilation tooling for ARM. This problem
can be avoided completely by committing the generated interface
bindings so that crates that depend on `linkerd2-proxy-api` don't need
any build dependencies.

This change removes the `client`, `server`, and `transport` features.
Client and server bindings are now always generated for gRPC services.
The `transport` feature is removed, since it cannot be optional if the
generated code is stored in the repo. We don't want to require tonic's
transport feature because it pulls in many dependencies that we don't
really need.

Signed-off-by: Oliver Gould <ver@buoyant.io>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,10 @@ jobs:
     container:
       image: docker://rust:1.59.0-buster
     steps:
+    - run: rustup component add clippy
     - uses: actions/checkout@v3
-    - run: rustup component add rustfmt # Needed for the rustfmt feature.
-    - run: make rs
+    - run: make fetch
+    - run: make clippy
 
   rust_audit:
     name: Rust audit
@@ -30,15 +31,6 @@ jobs:
     - uses: EmbarkStudios/cargo-deny-action@v1
       with:
         command: check ${{ matrix.checks }}
-
-  rust_lint:
-    name: Rust lint
-    timeout-minutes: 5
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - run: rustup component add clippy rustfmt
-      - run: make clippy
 
   go_build:
     name: Go build
