--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,13 @@ rust-version = "1.59"
 [features]
 default = []
 arbitrary = ["quickcheck"]
-destination = ["http_types", "net", "prost-types", "tonic/codegen"]
-http_types = ["http", "thiserror"]
+destination = ["http-types", "net", "prost-types", "tonic/codegen"]
+http-route = ["http-types"]
+http-types = ["http", "thiserror"]
 identity = ["prost-types", "tonic/codegen"]
-inbound = ["net", "prost-types", "tonic/codegen"]
+inbound = ["http-route", "net", "prost-types", "tonic/codegen"]
 net = ["ipnet", "thiserror"]
-tap = ["h2", "http_types", "net", "prost-types", "tonic/codegen"]
+tap = ["h2", "http-types", "net", "prost-types", "tonic/codegen"]
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docsrs"]
