dev: Update build tooling
* Remove the `bootstrap` Rust test in favor of a `gen` example. This
  allows us to regenerate Rust bindings without failing a test. This
  tooling now discovers all protobuf files instead of using a hardcoded
  list.
* Add a `tools.go` file to express dependencies on the tools needed to
  build the project.
* `just {go-,rs-,}gen-check` can be used to regenerate bindings and then
  check whether the generated bindings differ from what is in version
  control.
* `just go-gen` no longer uses a hardcoded list of protobuf files.
* Add `just go-mod-tree` and `go-mod-why` utilities to inspect the
  dependency tree (as cargo-tree would).
* Update the devcontainer configuration so that the vscode-proto3 plugin
  is aware of relative imports.
* The CI workflow is split into two language-specific workflows.

Signed-off-by: Oliver Gould <ver@buoyant.io>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,14 @@
         "tamasfe.even-better-toml",
         "zxh404.vscode-proto3"
     ],
+    "settings": {
+        "protoc": {
+            "path": "/usr/local/bin/protoc",
+            "options": [
+                "--proto_path=proto",
+            ]
+        }
+    },
     "runArgs": [
         "--init"
     ],
