Add a simple gRPC route sketch
Signed-off-by: Oliver Gould <ver@buoyant.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,9 @@ arbitrary = ["quickcheck"]
 destination = ["http-types", "net", "prost-types", "tonic/codegen"]
 http-route = ["http-types"]
 http-types = ["http", "thiserror"]
+grpc-route = ["http-route"]
 identity = ["prost-types", "tonic/codegen"]
-inbound = ["http-route", "net", "prost-types", "tonic/codegen"]
+inbound = ["grpc-route", "http-route", "net", "prost-types", "tonic/codegen"]
 net = ["ipnet", "thiserror"]
 tap = ["h2", "http-types", "net", "prost-types", "tonic/codegen"]
 
