--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ destination = ["http_types", "net", "prost-types", "tonic/codegen"]
 http_types = ["http", "thiserror"]
 identity = ["prost-types", "tonic/codegen"]
 inbound = ["net", "prost-types", "tonic/codegen"]
+meta = []
 net = ["ipnet", "thiserror"]
 tap = ["h2", "http_types", "net", "prost-types", "tonic/codegen"]
 
