--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,13 @@
 {
     "name": "linkerd2-proxy-api",
-    "image": "ghcr.io/linkerd/dev:v15",
+    "image": "ghcr.io/linkerd/dev:v22",
     "extensions": [
         "DavidAnson.vscode-markdownlint",
         "golang.go",
+        "kokakiwi.vscode-just",
         "NathanRidley.autotrim",
         "rust-lang.rust-analyzer",
         "samverschueren.final-newline",
-        "skellock.just",
         "tamasfe.even-better-toml",
         "zxh404.vscode-proto3"
     ],
