--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,13 +16,9 @@ jobs:
   go:
     timeout-minutes: 5
     runs-on: ubuntu-latest
+    container: docker://ghcr.io/linkerd/dev:v22-go
     steps:
-      - uses: extractions/setup-just@aa5d15c144db4585980a44ebfdd2cf337c4f14cb
-      - uses: actions/setup-go@84cbf8094393cdc5fe1fe1671ff2647332956b1a
-        with:
-          go-version: '1.17'
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
-      - uses: ./.github/actions/install-protoc
       - run: just go-mod-check
       - run: just go-gen-check
       - run: just go-build
