ci: Use devcontainer; fix release workflow (#144)
* Update the devcontainer version to v22
* Use devcontainers in CI for Rust and Go workflows
* Update the release automation workflow to do proper tag matching
  (since this repo doesn't use release/* prefixes).
* Remove install-protoc action

Signed-off-by: Oliver Gould <ver@buoyant.io>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,14 +21,12 @@ jobs:
   meta:
     timeout-minutes: 5
     runs-on: ubuntu-latest
-    container:
-      image: docker://rust:1.60
     steps:
       - id: meta
         shell: bash
         run: |
-          ref=${{ github.ref }}
-          if [[ "$ref" == refs/tags/release/* ]]; then
+          ref='${{ github.ref }}'
+          if [[ "$ref" =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+ ]]; then
             echo ::set-output name=publish::true
             echo ::set-output name=version::"${ref##refs/tags/release/}"
           else
@@ -42,13 +40,9 @@ jobs:
   test:
     timeout-minutes: 5
     runs-on: ubuntu-latest
-    container:
-      image: docker://rust:1.60
+    container: docker://ghcr.io/linkerd/dev:v22-rust
     steps:
-      - uses: extractions/setup-just@aa5d15c144db4585980a44ebfdd2cf337c4f14cb
-      - uses: olix0r/cargo-action-fmt@ed3530f0739c46ffa0dd983f8746b8c4a3d0a01c
       - uses: actions/checkout@dcd71f646680f2efd8db4afa5ad64fdcba30e748
-      - uses: ./.github/actions/install-protoc
       - run: just rs-fetch
       - run: just rs-gen-check
       - run: just rs-test-build
@@ -61,19 +55,17 @@ jobs:
       contents: write
     timeout-minutes: 5
     runs-on: ubuntu-latest
-    container:
-      image: docker://rust:1.60
+    container: docker://ghcr.io/linkerd/dev:v22-rust
     steps:
       - if: needs.meta.outputs.publish
         uses: actions/checkout@dcd71f646680f2efd8db4afa5ad64fdcba30e748
       - if: needs.meta.outputs.publish
         shell: bash
         run: |
-          curl --proto '=https' --tlsv1.3 -fsSL https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 -o $HOME/jq
-          chmod 755 $HOME/jq
-          version=$(cargo metadata --format-version=1 | $HOME/jq -r '.packages[] | select(.name == "linkerd2-proxy-api") | .version')
-          if [[ "v${version}" != "${{ needs.meta.outputs.version }}" ]]; then
-            echo "::error ::Crate version v${version} does not match tag ${{ needs.meta.outputs.version }}"
+          version=$(cargo metadata --format-version=1 | jq -r '.packages[] | select(.name == "linkerd2-proxy-api") | .version')
+          expected='${{ needs.meta.outputs.version }}'
+          if [[ "v${version}" != "$expected" ]]; then
+            echo "::error ::Crate version v${version} does not match tag $expected"
             exit 1
           fi
       - if: needs.meta.outputs.publish
@@ -87,11 +79,10 @@ jobs:
     needs: [meta, release]
     timeout-minutes: 10
     runs-on: ubuntu-latest
-    container:
-      image: docker://rust:1.60.0-bullseye
+    container: docker://ghcr.io/linkerd/dev:v22-rust
     steps:
-      - uses: extractions/setup-just@aa5d15c144db4585980a44ebfdd2cf337c4f14cb
       - uses: actions/checkout@dcd71f646680f2efd8db4afa5ad64fdcba30e748
-      - run: just rs-publish --dry-run
+      - if: '!needs.meta.outputs.publish'
+        run: just rs-publish --dry-run
       - if: needs.meta.outputs.publish
         run: just rs-publish --token=${{ secrets.CRATESIO_TOKEN }}
