--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,7 @@ jobs:
   actionlint:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    container: ghcr.io/linkerd/dev:v29-tools
+    container: ghcr.io/linkerd/dev:v30-tools
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
       - name: Run actionlint
@@ -25,15 +25,14 @@ jobs:
 
   devcontainer-versions:
     runs-on: ubuntu-latest
-    container: ghcr.io/linkerd/dev:v29-tools
+    container: ghcr.io/linkerd/dev:v30-tools
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
       - name: Scan workflows for other Devcontainer image versions
         shell: bash
         run: |
           set -euo pipefail
-          # Strip jsonc comments because `jq` doesn't support them.
-          image=$(json5-to-json <.devcontainer/devcontainer.json |jq -r '.image')
+          image=$(j5j .devcontainer/devcontainer.json |jq -r '.image')
           for f in .github/workflows/* ; do
             for i in $(yq '.jobs.* | .container.image // .container // "" | match("ghcr.io/linkerd/dev:v[0-9]+").string' < "$f") ; do
               if [ "$i" != "$image" ]; then
