--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,25 @@ grpc-route = ["http-route"]
 http-route = ["http-types"]
 http-types = ["http", "thiserror"]
 identity = ["prost-types", "tonic/codegen"]
-inbound = ["grpc-route", "http-route", "meta", "net", "prost-types", "tonic/codegen"]
+inbound = [
+    "grpc-route",
+    "http-route",
+    "meta",
+    "net",
+    "prost-types",
+    "tonic/codegen",
+]
 meta = []
 net = ["ipnet", "thiserror"]
 tap = ["h2", "http-types", "net", "prost-types", "tonic/codegen"]
+client-policy = [
+    "destination",
+    "http-route",
+    "meta",
+    "net",
+    "prost-types",
+    "tonic/codegen",
+]
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docsrs"]
