--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
           ref='${{ github.ref }}'
           if [[ "$ref" =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+ ]]; then
             echo ::set-output name=publish::true
-            echo ::set-output name=version::"${ref##refs/tags/release/}"
+            echo ::set-output name=version::"${ref##refs/tags/}"
           else
             sha=${{ github.sha }}
             echo ::set-output name=version::"test-${sha:0:7}"
