--- a/deny.toml
+++ b/deny.toml
@@ -14,6 +14,19 @@ notice = "warn"
 ignore = []
 
 [licenses]
+exceptions = [
+    # The Unicode-DFS--2016 license is necessary for unicode-ident because they
+    # use data from the unicode tables to generate the tables which are
+    # included in the application. We do not distribute those data files so
+    # this is not a problem for us. See https://github.com/dtolnay/unicode-ident/pull/9/files
+    # for more details.
+    { allow = [
+        "MIT",
+        "Apache-2.0",
+        "Unicode-DFS-2016",
+    ], name = "unicode-ident" },
+]
+
 unlicensed = "deny"
 allow = [
     "Apache-2.0",
@@ -24,8 +37,6 @@ copyleft = "deny"
 allow-osi-fsf-free = "neither"
 default = "deny"
 confidence-threshold = 0.8
-exceptions = []
-
 [bans]
 multiple-versions = "deny"
 # Wildcard dependencies are used for all workspace-local crates.
