Introduce the OutboundPolicies API (#165)
To support Gateway API-style HTTP routing in the outbound proxy, this
change introduces a new `OutboundPolicies` API so that proxies may
discover outbound configurations.

This API is intended to, eventually, replace the `GetProfile` endpoint
on the `Destination` API. Further enhancements to this API will be
necessary to replace all of the functionality currently provided by the
ServiceProfile API.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ http-route = ["http-types"]
 http-types = ["http", "thiserror"]
 identity = ["prost-types", "tonic/codegen"]
 inbound = ["grpc-route", "http-route", "meta", "net", "prost-types", "tonic/codegen"]
+outbound = ["grpc-route", "destination", "http-route", "meta", "net", "prost-types", "tonic/codegen"]
 meta = []
 net = ["ipnet", "thiserror"]
 tap = ["h2", "http-types", "net", "prost-types", "tonic/codegen"]
