Update dev to v39
* Updates Go to v1.19

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,22 +1,26 @@
 {
     "name": "linkerd2-proxy-api",
-    "image": "ghcr.io/linkerd/dev:v32",
-    "extensions": [
-        "DavidAnson.vscode-markdownlint",
-        "golang.go",
-        "kokakiwi.vscode-just",
-        "NathanRidley.autotrim",
-        "rust-lang.rust-analyzer",
-        "samverschueren.final-newline",
-        "tamasfe.even-better-toml",
-        "zxh404.vscode-proto3"
-    ],
-    "settings": {
-        "protoc": {
-            "path": "/usr/local/bin/protoc",
-            "options": [
-                "--proto_path=proto",
-            ]
+    "image": "ghcr.io/linkerd/dev:v39",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "DavidAnson.vscode-markdownlint",
+                "golang.go",
+                "kokakiwi.vscode-just",
+                "NathanRidley.autotrim",
+                "rust-lang.rust-analyzer",
+                "samverschueren.final-newline",
+                "tamasfe.even-better-toml",
+                "zxh404.vscode-proto3"
+            ],
+            "settings": {
+                "protoc": {
+                    "path": "/usr/local/bin/protoc",
+                    "options": [
+                        "--proto_path=proto",
+                    ]
+                }
+            }
         }
     },
     "runArgs": [
