--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,33 +11,16 @@ permissions:
 
 jobs:
   actionlint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     timeout-minutes: 10
-    container: ghcr.io/linkerd/dev:v32-tools
     steps:
+      - uses: linkerd/dev/actions/setup-tools@v39
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-      - name: Run actionlint
-        run: |
-          # shellcheck disable=SC2016
-          actionlint \
-            -format '{{range $err := .}}::error file={{$err.Filepath}},line={{$err.Line}},col={{$err.Column}}::{{$err.Message}}%0A```%0A{{replace $err.Snippet "\\n" "%0A"}}%0A```\n{{end}}' \
-            .github/workflows/*
+      - run: just action-lint
 
   devcontainer-versions:
     runs-on: ubuntu-latest
-    container: ghcr.io/linkerd/dev:v32-tools
     steps:
+      - uses: linkerd/dev/actions/setup-tools@v39
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-      - name: Scan workflows for other Devcontainer image versions
-        shell: bash
-        run: |
-          set -euo pipefail
-          image=$(j5j .devcontainer/devcontainer.json |jq -r '.image')
-          for f in .github/workflows/* ; do
-            for i in $(yq '.jobs.* | .container.image // .container // "" | match("ghcr.io/linkerd/dev:v[0-9]+").string' < "$f") ; do
-              if [ "$i" != "$image" ]; then
-                echo "::error file=$f::Workflow '$f' uses incorrect Devcontainer image '$i'"
-                exit 1
-              fi
-            done
-          done
+      - run: just action-dev-check
