--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,16 +11,16 @@ permissions:
 
 jobs:
   actionlint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - uses: linkerd/dev/actions/setup-tools@v39
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-      - run: just action-lint
+      - run: just-dev lint-actions
 
   devcontainer-versions:
     runs-on: ubuntu-latest
     steps:
       - uses: linkerd/dev/actions/setup-tools@v39
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-      - run: just action-dev-check
+      - run: just-dev check-action-images
