--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ default = []
 arbitrary = ["quickcheck"]
 destination = ["http-types", "net", "prost-types", "tonic/codegen"]
 grpc-route = ["http-route"]
+tls-route = []
 http-route = ["http-types"]
 http-types = ["http", "thiserror"]
 identity = ["prost-types", "tonic/codegen"]
@@ -28,6 +29,7 @@ inbound = [
     "tonic/codegen",
 ]
 outbound = [
+    "tls-route",
     "grpc-route",
     "destination",
     "http-route",
