turn route and backend errors into filters
Signed-off-by: Zahari Dichev <zaharidichev@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ inbound = [
 ]
 outbound = [
     "tls-route",
+    "opaque-route",
     "grpc-route",
     "destination",
     "http-route",
@@ -41,6 +42,7 @@ meta = []
 net = ["ipnet", "thiserror"]
 tap = ["h2", "http-types", "net", "prost-types", "tonic/codegen"]
 tls-route = []
+opaque-route = []
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docsrs"]
