refactor(policy)!: use filters instead of explicit errors in TCP and TLS protocols (#405)
This change removes the RouteError and Invalid types from the routes and backends of TLS and TCP protocols and moves to using filters.

Signed-off-by: Zahari Dichev <zaharidichev@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,17 +28,19 @@ inbound = [
     "tonic/codegen",
 ]
 outbound = [
-    "tls-route",
-    "grpc-route",
     "destination",
+    "grpc-route",
     "http-route",
     "meta",
     "net",
+    "opaque-route",
     "prost-types",
+    "tls-route",
     "tonic/codegen",
 ]
 meta = []
 net = ["ipnet", "thiserror"]
+opaque-route = []
 tap = ["h2", "http-types", "net", "prost-types", "tonic/codegen"]
 tls-route = []
 
