chore(deps): Update tonic to 0.14

--- a/deny.toml
+++ b/deny.toml
@@ -37,7 +37,10 @@ highlight = "all"
 skip = [
     { name = "syn" },
 ]
-skip-tree = []
+skip-tree = [
+    # socket v0.6 is still propagating through the ecosystem
+    { name = "socket2", version = "0.5" },
+]
 
 [sources]
 unknown-registry = "deny"
