--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,17 +52,12 @@ all-features = true
 h2 = { version = "0.4", optional = true }
 http = { version = "1.2", optional = true }
 ipnet = { version = "2", optional = true }
-prost = "0.13"
-prost-types = { version = "0.13", optional = true }
+prost = "0.14"
+prost-types = { version = "0.14", optional = true }
 quickcheck = { version = "1", default-features = false, optional = true }
 thiserror = { version = "2", optional = true }
+tonic = { version = "0.14", default-features = false, features = ["channel"] }
+tonic-prost = "0.14"
 
-[dependencies.tonic]
-version = "0.13"
-default-features = false
-features = ["prost"]
-
-[dev-dependencies.tonic-build]
-version = "0.13"
-default-features = false
-features = ["prost"]
+[dev-dependencies]
+tonic-prost-build = "0.14"
